<resources>
    <string name="app_name">Assistente Financeiro</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_lancamentos">Lançamentos</string>
    <string name="title_activity_cadastro_lancamento">Novo Lançamento</string>
    <string name="login">Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuário e/ou senha inválidos!</string>
    <string name="receitas">Receitas</string>
    <string name="despesas">Despesas</string>
    <string name="investimentos">Investimentos</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="novo_lancamento">Novo Lançamento</string>
    <string name="resumo_financeiro">Resumo Financeiro</string>
    <string name="categoria">Categoria</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="data_lancamento">Data do lançamento</string>
    <string name="salvar_lancamento">Salvar Novo Lançamento</string>
    <string name="listar_lançamentos">Lista Lançamentos</string>

    <string-array name="categoria_receita">
        <item>-- Selecione uma subcategoria --</item>
        <item>Salário</item>
        <item>Outros</item>
    </string-array>

    <string-array name="categoria_despesa">
        <item>-- Selecione uma subcategoria --</item>
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <string-array name="categoria_investimento">
        <item>-- Selecione uma subcategoria --</item>
        <item>Ações</item>
        <item>Tesouro Direto</item>
        <item>Outros</item>
    </string-array>
</resources>
