<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/novo_lancamento"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/categoria"
        android:textColor="#FFF" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#333"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receitas"
                android:textColor="#FFF"
                android:onClick="selecionarCategoria"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/despesas"
                android:textColor="#FFF"
                android:onClick="selecionarCategoria"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investimentos"
                android:textColor="#FFF"
                android:onClick="selecionarCategoria"/>

        </RadioGroup>
    </LinearLayout>

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/descricao"
        android:textColorHint="#FFF"
        android:textColor="#FFF"/>

    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/valor"
        android:textColorHint="#FFF"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_lancamento"
        android:textColor="#FFF" />
    <Button
        android:id="@+id/dataLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="selecionarData"
        android:layout_marginBottom="100dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar_lancamento"
        android:onClick="salvarLancamento"/>
</LinearLayout>