<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resumo_financeiro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFF"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/receitas"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/totalReceitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Valor Receitas"
        android:textColor="#15f900"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/despesas"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/totalDespesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Valor Despesas"
        android:textColor="#ff1910"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/investimentos"
        android:textColor="#FFF"/>

    <TextView
        android:id="@+id/totalInvestimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Valor Investimentos"
        android:textColor="#fded06"
        android:layout_marginBottom="80dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/novo_lancamento"
        android:drawableRight="@drawable/add"
        android:drawablePadding="10dp"
        android:onClick="novoLancamento"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/listar_lançamentos"
        android:drawableRight="@drawable/list"
        android:drawablePadding="10dp"
        android:onClick="listarLancamentos"/>
</LinearLayout>